; ModuleID = '/home/carl/AnghaBench/redis/src/extr_module.c_RM_RetainString.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_module.c_RM_RetainString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REDISMODULE_AM_STRING = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @RM_RetainString(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %13, label %7

7:                                                ; preds = %2
  %8 = load i32*, i32** %3, align 8
  %9 = load i32, i32* @REDISMODULE_AM_STRING, align 4
  %10 = load i32*, i32** %4, align 8
  %11 = call i32 @autoMemoryFreed(i32* %8, i32 %9, i32* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %16, label %13

13:                                               ; preds = %7, %2
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @incrRefCount(i32* %14)
  br label %16

16:                                               ; preds = %13, %7
  ret void
}

declare dso_local i32 @autoMemoryFreed(i32*, i32, i32*) #1

declare dso_local i32 @incrRefCount(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
